--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,5 +7,6 @@
 <body>
     <h1>Bienvenue sur votre projet Spring avec DAO !</h1>
     <p>Ceci est la page d'accueil.</p>
+    <p>premier modification</p>
 </body>
 </html>
