--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Bienvenue sur votre projet Spring avec DAO !</h1>
     <p>Ceci est la page d'accueil.</p>
-    <p>premier modification</p>
+    <p>deuxieme modification</p>
+    <p>azyen</p>
 </body>
 </html>
