Update Project (CSS)

--- a/bin/src/main/resources/templates/index.html
+++ b/bin/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Projet JEFF : Location de voitures avec une gestion facile et efficace des véhicules disponibles.">
     <meta name="author" content="Projet JEFF">
     <title>CarPush: Location de Voitures</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
