--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,247 +1,733 @@
-/* Styles globaux */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+
+:root {
+    --font-rubik: 'Rubik', sans-serif;
+    --font-poppins: 'Poppins', sans-serif;
+    ;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
 body {
-    font-family: 'Poppins', Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(to bottom, #000000, #1a1a1a); /* Black to dark grey gradient */
-    color: #fff; /* Light text for contrast */
-    line-height: 1.6;
+    font-family: Poppins, sans-serif;
+    position: relative;
     overflow-x: hidden;
 }
 
-/* En-tête */
-header {
-    background-color: #d40000; /* Red header */
-    color: white;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
-    padding: 20px 40px;
-    position: relative;
-    top: 0;
-    z-index: 1000;
-    transition: all 0.3s ease;
-}
-
-header:hover {
-    background-color: #c30000;  /* Darker red on hover */
-}
-
-.header-content {
-    display: flex;
-    justify-content: space-between;
+.navbar {
     align-items: center;
-    animation: slideIn 0.5s ease-out;
-
-}
-
-header h1 {
-    font-size: 2.4em;
-    font-weight: bold;
-    margin: 0;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: white;
-}
-
-header .logo {
-    width: 250px;
-    height: 120px;
-
-    
-}
-
-header nav button {
-    background-color: white;
-    color: #d40000; /* Red text */
-    border: 2px solid #d40000;
-    border-radius: 30px;
-    padding: 12px 24px;
-    margin-left: 10px;
-    font-size: 1.1em;
-    cursor: pointer;
-    font-weight: bold;
-    transition: all 0.3s ease;
-    text-transform: uppercase;
-}
-
-header nav button:hover {
-    background-color: #c30000;
-    color: white;
-    transform: scale(1.05);
-}
-
-/* Section principale */
-main {
-    padding: 60px 20px;
-    max-width: 1200px;
-    margin: auto;
-    animation: fadeIn 1s ease-out;
-}
-
-main section {
-    margin-bottom: 40px;
-}
-
-main h2 {
-    font-size: 2.5em;
-    color: #d40000; /* Red headings */
-    margin-bottom: 20px;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    animation: slideIn 1s ease-out;
-}
-
-main p {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-    color: #f4f4f4; /* Light text */
-    text-align: center;
-}
-
-/* Images */
-main img {
-    display: block;
-    max-width: 30%; 
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
-    margin: 20px auto;
-    transition: transform 0.3s ease-in-out;
-}
-
-main img:hover {
-    transform: scale(1.05);
-}
-
-/* Cartes des voitures */
-.cars-available {
+    background-color: initial;
     display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: center;
-}
-
-.voiture {
-    background-color: #333; /* Dark background for cars */
-    border: 1px solid #444;
-    border-radius: 12px;
-    padding: 20px;
-    text-align: center;
-    width: calc(33.33% - 20px);
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-    animation: fadeInUp 0.5s ease-out;
-}
-
-.voiture:hover {
-    transform: translateY(-10px);
-    box-shadow: 0px 8px 25px rgba(0, 0, 0, 0.2);
-}
-
-.voiture h3 {
-    font-size: 1.7em;
-    color: rgb(79, 72, 141); /* Red headings for cars */
-    margin-bottom: 15px;
-    font-weight: 600;
-}
-
-.voiture p {
-    font-size: 1.1em;
-    color: white; /* Light text */
-    margin-bottom: 15px;
-}
-
-.voiture img {
-    max-width: 100%;
     height: auto;
-    border-radius: 10px;
-    margin-bottom: 15px;
-    transition: transform 0.3s ease;
+    justify-content: space-between;
+    left: 0;
+    margin: 0 auto;
+    max-width: 1290px;
+    padding: 2.7rem 2rem;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    z-index: 99999;
 }
 
-.voiture img:hover {
-    transform: scale(1.1);
+.navbar-links a:hover, .navbar-buttons-sign-in:hover {
+    color: #ff4d30;
 }
 
-/* Pied de page */
-footer {
-    background-color: #1a1a1a; /* Dark footer */
-    color: white;
-    text-align: center;
-    padding: 25px 10px;
-    font-size: 1em;
-    margin-top: 40px;
-    box-shadow: 0px -4px 6px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s ease;
+.navbar-img {
+    width: 145px;
 }
 
-footer:hover {
-    background-color: #000000;
+.navbar-img img {
+    height: 100%;
+    width: 100%;
 }
 
-footer ul {
+.navbar-links {
+    display: flex;
+    gap: 2.1rem;
     list-style: none;
-    padding: 0;
-    margin: 15px 0;
-    display: flex;
-    justify-content: center;
-    gap: 30px;
 }
 
-footer ul li a {
-    color: white;
+.navbar-links a {
+    color: #010103;
+    cursor: pointer;
+    font-family: var(--font-rubik);
+    font-size: 16px;
+    font-weight: 500;
     text-decoration: none;
-    font-size: 1.1em;
-    font-weight: bold;
-    border-bottom: 2px solid transparent;
-    transition: all 0.3s ease;
+    transition: all .3s;
 }
 
-footer ul li a:hover {
-    border-bottom: 2px solid white;
-    color: #f4f9ff; /* Light hover text */
+.navbar-buttons {
+    align-items: center;
+    display: flex;
+    font-family: var(--font-rubik);
+    font-size: 16px;
+    font-weight: 500;
+    gap: 2.5rem;
 }
 
-/* Animations */
-@keyframes slideIn {
-    0% { transform: translateY(-50px); opacity: 0; }
-    100% { transform: translateY(0); opacity: 1; }
+.navbar-buttons-sign-in {
+    color: #010103;
+    cursor: pointer;
+    transition: all .3s;
 }
 
-@keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+
+.navbar-buttons-register {
+    background-color: #ff4d30;
+    border-radius: 3px;
+    box-shadow: 0 10px 15px 0 rgba(255, 83, 48, .35);
+    color: #fff;
+    padding: 1rem 2rem;
+    transition: all .3s;
 }
 
-@keyframes fadeInUp {
-    0% { transform: translateY(30px); opacity: 0; }
-    100% { transform: translateY(0); opacity: 1; }
+.open-nav {
+    left: 0;
 }
 
-/* Responsive Design */
-@media (max-width: 768px) {
-    .header-content {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
+.hero-section {
+    background-color: #f8f8f8;
+    height: 97vh;
+    position: relative;
+    width: 100%;
+}
 
-    header nav button {
-        margin: 10px 5px;
-        padding: 8px 15px;
-        font-size: 0.9em;
-    }
+.container {
+    margin: 0 auto;
+    max-width: 1290px;
+    padding: 0 2.5rem;
+}
 
-    .cars-available {
-        flex-direction: column;
-    }
+.bg-shape {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1;
+}
 
-    .voiture {
-        width: 100%;
-    }
+.hero-content {
+    align-items: center;
+    display: flex;
+    height: 100vh;
+    position: relative;
+    width: 100%;
+}
 
-    main h2 {
-        font-size: 1.8em;
-    }
+.hero-content-text {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+    max-width: 500px;
+    z-index: 3;
+}
+
+.hero-content-text h4 {
+    color: #010103;
+    font-family: var(--font-rubik);
+    font-size: 22px;
+}
+
+.hero-content-text h1 {
+    color: #010103;
+    font-family: var(--font-poppins);
+    font-size: 52px;
+    font-weight: 700;
+    line-height: 1.2;
+    margin-bottom: 2.3rem;
+    margin-top: 1rem;
+}
+
+.hero-content-text h1 span {
+    color: #ff4d30;
+}
+
+.hero-content-text p {
+    color: #706f7b;
+    font-family: var(--font-rubik);
+    font-size: 16px;
+    line-height: 1.6;
+    margin-bottom: 4rem;
+}
+
+.hero-content-text-btns {
+    display: flex;
+    font-family: var(--font-rubik);
+    font-size: 16px;
+    gap: 2rem;
+}
+
+.hero-content-text-btns a {
+    color: #fff;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.hero-content-text-btns-book-ride {
+    background-color: #ff4d30;
+    border: 2px solid #ff4d30;
+    border-radius: 0.3rem;
+    box-shadow: 0 10px 15px 0 rgba(255, 83, 48, .35);
+    padding: 1rem 2rem;
+    transition: all .3s;
+}
+
+.hero-content-text-btns-learn-more {
+    background-color: #010103;
+    border: 2px solid #010103;
+    border-radius: 0.3rem;
+    padding: 1rem 2rem;
+    transition: all .3s;
+}
+
+.hero-content-text-btns-learn-more:hover {
+    background-color: initial;
+    color: #010103;
+}
+
+.hero-content-car-img {
+    margin-top: 5rem;
+    position: absolute;
+    right: 0;
+    width: 65%;
+    z-index: 2;
+}
+
+.book-section {
+    background: linear-gradient(180deg, #f8f8f8 20%, #fff 80%);
+    position: relative;
+}
+
+.booking-modal,
+.modal-overlay {
+    display: none;
+    opacity: 0;
+    position: fixed;
+}
+
+.modal-overlay {
+    background-color: rgba(0, 0, 0, .3);
+    height: 100%;
+    right: 0;
+    top: 0;
+    width: 100%;
+    z-index: 999999999;
+}
+
+.book-content {
+    margin: 0 auto 10rem;
+}
+
+.book-content-box {
+    background-color: #fff;
+    background-image: url(/static/media/book-bg.6f629a1….png);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 5px;
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, .1);
+    color: #fff;
+    color: #010103;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    padding: 4rem 4.5rem 5rem 5.5rem;
+    position: relative;
+    width: 100%;
+    z-index: 4;
+}
+
+.book-content-box h2 {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 27px;
+}
+
+.book-content-box .box-form-car-type label i {
+    color: #ff4d30;
+}
+
+.book-content-box .box-form-car-time label i {
+    color: #ff4d30;
+}
+
+.book-content-box .box-form b {
+    color: #ff4d30;
+}
+
+.error-message {
+    align-items: center;
+    background-color: #f8d7da;
+    border: 1px solid transparent;
+    border-radius: 0.8rem;
+    color: #721c24;
+    display: none;
+    font-size: 16px;
+    font-weight: 500;
+    justify-content: space-between;
+    margin-bottom: 1.8rem;
+    margin-top: -1rem;
+    padding: 1rem 1.4rem;
+}
+
+.booking-done {
+    align-items: center;
+    background-color: #c3fabe;
+    border: 1px solid transparent;
+    border-radius: 0.8rem;
+    color: #2a6817;
+    display: none;
+    font-size: 16px;
+    font-weight: 500;
+    justify-content: space-between;
+    margin-bottom: 1.8rem;
+    margin-top: -1rem;
+    padding: 1rem 1.4rem;
+}
+
+
+.book-content-box .box-form {
+    grid-gap: 2rem;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto;
+}
+
+.book-content-box .box-form-car-type {
+    display: flex;
+    flex-direction: column;
+}
+
+.book-content-box .box-form-car-type label {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 1.2rem;
+}
+
+.book-content-box .box-form-car-type select {
+    border: 1px solid #ccd7e6;
+    border-radius: 3px;
+    color: #ababab;
+    font-family: var(--font-rubik);
+    font-size: 15px;
+    font-weight: 400;
+    outline: none;
+    padding: 1.1rem 1.1rem;
+}
+
+.book-content-box button {
+    align-self: self-end;
+    background-color: #ff4d30;
+    border: none;
+    box-shadow: 0 10px 15px rgba(255, 83, 48, .35);
+    color: #fff;
+    cursor: pointer;
+    font-family: var(--font-rubik);
+    font-size: 18px;
+    font-weight: 500;
+    height: -moz-fit-content;
+    height: -webkit-fit-content;
+    height: fit-content;
+    padding: 14px;
+    transition: all .3s;
+}
+
+.book-content-box .box-form-car-time {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.book-content-box .box-form-car-time label {
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 1.2rem;
+}
+
+.book-content-box .box-form-car-time input {
+    border: 1px solid #ccd7e6;
+    color: #878585;
+    outline: none;
+    padding-right: 3rem;
+    padding: 1rem;
+}
+
+.pick-section {
+    padding: 10rem 0;
+}
+
+.pick-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.pick-container-title {
+    color: #010103;
+    margin: 0 auto 5rem;
+    max-width: 500px;
+    text-align: center;
+}
+
+.pick-container-title h3 {
+    font-family: var(--font-rubik);
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.pick-container-title h2 {
+    font-family: var(--font-poppins);
+    font-size: 42px;
+    margin: 0.5rem 0 1rem;
+}
+
+.pick-container-title p {
+    color: #706f7b;
+    font-family: var(--font-rubik);
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.pick-container-car-content {
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+}
+
+.pick-box {
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+}
+
+.pick-box button {
+    background-color: #e9e9e9;
+    border: none;
+    cursor: pointer;
+    font-family: var(--font-poppins);
+    font-size: 20px;
+    font-weight: 600;
+    padding: 1rem 1rem;
+    text-align: left;
+    transition: all .2s;
+}
+
+.colored-button {
+    background-color: #ff4d30 !important;
+    color: #fff;
+}
+
+.box-cars {
+    display: flex;
+    gap: 4rem;
+    justify-content: space-between;
+}
+
+.pick-car {
+    position: relative;
+    width: 500px;
+}
+
+.pick-car img {
+    margin-top: 4rem;
+    width: 100%;
+}
+
+.pick-description {
+    width: 250px;
+}
+
+.pick-description-price {
+    align-items: center;
+    background-color: #ff4d30;
+    color: #fff;
+    display: flex;
+    font-size: 18px;
+    gap: 1.5rem;
+    padding: 0.3rem 1.9rem;
+    white-space: nowrap;
+    width: 100%;
+}
+
+.pick-description-price span {
+    font-size: 28px;
+    font-weight: 700;
+}
+
+.pick-description-table {
+    display: grid;
+    font-size: 14px;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+}
+
+.pick-description-table-col,
+.pick-description-table-col span:first-child {
+    border-right: 2px solid #706f7b;
+}
+
+.pick-description-table-col {
+    border-bottom: 2px solid #706f7b;
+    border-left: 2px solid #706f7b;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    padding: 0.6rem 0.3rem;
+    text-align: center;
+}
+
+.cta-btn {
+    background-color: #ff4d30;
+    box-shadow: 6px 6px 0 #efe9e9;
+    color: #fff;
+    display: flex;
+    font-family: var(--font-poppins);
+    font-size: 20px;
+    font-weight: 600;
+    justify-content: center;
+    margin-top: 1.4rem;
+    padding: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all .3s;
+    width: 100%;
+}
+
+.cta-btn:hover {
+    background-color: #e9381d;
+}
+
+.banner-section {
+    background-color: #2d2d2d;
+    display: flex;
+    height: auto;
+    margin: 8rem 0;
+    padding: 4rem 0;
+    text-align: center;
+    width: 100%;
+}
+
+.banner-content {
+    align-items: center;
+    color: #fff;
+    display: flex;
+    height: 100%;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.banner-content-text {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.banner-content-text h2 {
+    font-size: 52px;
+    line-height: 1.3;
+}
+
+.banner-content-text p {
+    font-size: 24px;
+}
+
+.banner-content-text span {
+    color: #ff4d30;
+    font-weight: 500;
+}
+
+.text-container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 3rem;
+    width: 100%;
+}
+
+.text-container-left {
+    color: #010103;
+    display: flex;
+    flex-direction: column;
+    max-width: 500px;
+    text-align: left;
+}
+
+.text-container-left h4 {
+    font-family: var(--font-rubik);
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 0.7rem;
+}
+
+.text-container-left h2 {
+    font-size: 42px;
+    line-height: 1.2;
+    margin-bottom: 2rem;
+}
+
+.text-container-left p {
+    color: #706f7b;
+    font-family: var(--font-rubik);
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 3.3rem;
+}
+
+.text-container-left a {
+    background-color: #ff4d30;
+    border: 2px solid #ff4d30;
+    border-radius: 0.3rem;
+    box-shadow: 0 10px 15px 0 rgba(255,83,48,.35);
+    color: #fff;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 1rem 2rem;
+    text-decoration: none;
+    transition: all .3s;
+    width: -moz-fit-content;
+    width: -webkit-fit-content;
+    width: fit-content;
+}
+
+.text-container-left a:hover {
+    box-shadow:  0 10px 40px 0 rgba(255,83,48,.35);
+}
+
+.text-container-right {
+    display: flex;
+    flex-direction: column;
+    gap: 4.5rem;
+    max-width: 440px;
+}
+
+.text-container-right-box {
+    display: flex;
+}
+
+.text-container-right-box img {
+    height: 110px;
+    margin-right: 1.1rem;
+    width: 110px;
+}
+
+.text-container-right-box-text {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+}
+
+.text-container-right-box-text h4 {
+    font-size: 24px;
+}
+
+.text-container-right-box-text p {
+    color: #706f7b;
+    font-family: var(--font-rubik);
+    font-size: 16px;
+    line-height: 1.3;
+}
+
+footer {
+    background-color: #fff;
+    padding: 5rem 0;
+}
+
+.footer-content {
+    grid-gap: 8rem;
+    color: #010103;
+    display: grid;
+    gap: 4rem;
+    grid-template-columns: 27fr 21fr 21fr 21fr;
+    justify-content: center;
+    text-align: left;
+}
+
+.footer-content-1 li:first-child {
+    font-size: 24px;
+    margin-bottom: 1.5rem;
+}
+
+.footer-content-1 li:first-child span {
+    font-weight: 700;
+    margin-right: 10px;
+}
+
+.footer-content-1 li:nth-child(2) {
+    color: #706f7b;
+    font-size: 16px;
+    line-height: 1.7;
+    margin-bottom: 3rem;
+}
+
+.footer-content-1 li:nth-child(3), .footer-content-1 li:nth-child(4) {
+    font-family: var(--font-rubik);
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 1rem;
+}
+
+.footer-content-1 li a {
+    color: #010103;
+    text-decoration: none;
+    transition: all .2s;
+}
+
+.footer-content-2 li:first-child {
+    cursor: auto;
+    font-family: var(--font-poppins);
+    font-size: 24px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.footer-content-2 li {
+    font-size: 16px;
+    margin-bottom: 1rem;
+}
+
+.footer-content-2 a {
+    color: #010103;
+    text-decoration: none;
+    transition: all .2s;
+}
+
+.footer-content-2 a:hover, .footer-content-1 a:hover {
+    color: #FF4D30;
+}
+
+.footer-content-2 input {
+    background-color: #ececec;
+    border-color: transparent;
+    border-width: 1px;
+    font-family: var(--font-rubik);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+    margin-top: 1rem;
+    outline: none;
+    padding: 10px 60px;
+}
+
+.submit-email {
+    background-color: #ff4d30;
+    border: 2px solid #ff4d30;
+    border-radius: 0.3rem;
+    box-shadow: 0 10px 15px 0 rgba(255,83,48,.25);
+    color: #fff;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 700;
+    padding: 15px 60px;
+    text-decoration: none;
+    transition: all .3s;
+    width: -moz-fit-content;
+    width: -webkit-fit-content;
+    width: fit-content;
+    width: 100%;
 }
