--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 
     <link rel="shortcut icon" href="images/" type="image/x-icon" />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="scrollbar.css">
     <link rel="stylesheet" href="querryHome.css">
@@ -32,15 +32,7 @@
                     <a class="navbar-buttons-sign-in" href="#">Sign-In</a>
                     <a class="navbar-buttons-register" href="#">Register</a>
                 </div>
-                <div class="mobile-hamb">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        class="tabler-icon tabler-icon-menu-2">
-                        <path d="M4 6l16 0"></path>
-                        <path d="M4 12l16 0"></path>
-                        <path d="M4 18l16 0"></path>
-                    </svg>
-                </div>
+                
             </div>
         </nav>
     </header>
