--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,7 +19,7 @@
         <nav>
             <div class="navbar">
                 <div class="navbar-img">
-                    <a href="#"><img src="images/logo/logo (4).png" alt="" /></a>
+                    <a href="#"><img src="images/logocar.png" alt="" /></a>
                 </div>
                 <ul class="navbar-links">
                     <li><a href="#">Home</a></li>
